--- a/FoodTracker/Base.lproj/Main.storyboard
+++ b/FoodTracker/Base.lproj/Main.storyboard
@@ -37,6 +37,9 @@
                                         <state key="normal" title="Set Default Label Text">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="setDefaultLabelText:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fNm-zA-86y"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -52,6 +55,10 @@
                             <constraint firstAttribute="trailingMargin" secondItem="EWo-b1-Gdh" secondAttribute="trailing" id="gCf-Mr-D0F"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mealNameLabel" destination="8ao-c3-r5P" id="bXV-Gm-YMZ"/>
+                        <outlet property="nameTextField" destination="QUB-cq-0VS" id="WYN-n9-2Bs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
