Hooked up "Cancel" button to UI Navigation to get from meal creation to meal list

--- a/FoodTracker/Base.lproj/Main.storyboard
+++ b/FoodTracker/Base.lproj/Main.storyboard
@@ -111,7 +111,11 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="New Meal" id="y4T-2l-MaI">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="P2J-2I-4QR"/>
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="P2J-2I-4QR">
+                            <connections>
+                                <action selector="cancel:" destination="BYZ-38-t0r" id="tA5-qk-L1c"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="ST0-jG-MvS">
                             <connections>
                                 <segue destination="sSS-0F-OKz" kind="unwind" unwindAction="unwindToMealList:" id="ONJ-tL-JQI"/>
